# stratum

./: .gitignore  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml
crates/stratum/: Cargo.toml
crates/stratum-core/: Cargo.toml
crates/stratum-core/src/: congruence.rs  labelled.rs  lib.rs  reduce.rs  subst.rs  term.rs
crates/stratum-core/tests/: annihilation.rs  congruence.proptest-regressions  congruence.rs  differential.rs  labelled.rs  oracle_corpus.txt  oracle_differential.rs  reduction.rs
crates/stratum-equiv/: Cargo.toml
crates/stratum-equiv/src/: labelled_bisim.rs  lib.rs
crates/stratum-equiv/tests/: bisim.rs  differential.rs  labelled_bisim.rs
crates/stratum-field/: Cargo.toml
crates/stratum-field/src/: content.rs  filtration.rs  lib.rs
crates/stratum-field/tests/: field.rs  filtration.rs  payload.rs
crates/stratum-kernel/: Cargo.toml  README.md  install.sh
crates/stratum-kernel/kernelspec/: kernel.json
crates/stratum-kernel/src/: main.rs  wire.rs
crates/stratum-kernel/tests/: protocol.rs
crates/stratum-logic/: Cargo.toml
crates/stratum-logic/src/: check.rs  formula.rs  lib.rs  onthefly.rs
crates/stratum-logic/tests/: check.rs  completeness.rs  epistemic.rs  fairness.rs  onthefly.rs
crates/stratum-lts/: Cargo.toml
crates/stratum-lts/src/: event.rs  lib.rs  structure.rs  trace.rs
crates/stratum-lts/tests/: explore.rs  por.rs  symmetry.rs
crates/stratum-notebook/: Cargo.toml
crates/stratum-notebook/src/: eval.rs  formula.rs  lib.rs  render.rs  script.rs  service.rs
crates/stratum-notebook/tests/: eval.rs  rune.rs
crates/stratum-syntax/: Cargo.toml  README.md  build.rs
crates/stratum-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs  render.rs  resolve.rs
crates/stratum-syntax/tests/: defs.rs  fold.rs  parse.rs  roundtrip.rs  tree_sitter.rs
crates/stratum-syntax/tree-sitter/: grammar.js  tree-sitter.json
crates/stratum-syntax/tree-sitter/queries/: highlights.scm  locals.scm
crates/stratum-syntax/tree-sitter/src/: grammar.json  node-types.json  parser.c
crates/stratum-syntax/tree-sitter/test/corpus/: basic.txt  declarations.txt
crates/stratum-types/: Cargo.toml
crates/stratum-types/src/: check.rs  lib.rs  ty.rs
crates/stratum/examples/: encodings.rs  handshake.rs  handshake.strat  hotel.ipynb  tour.ipynb  traces.ipynb  typed_handshake.rs
crates/stratum/src/: encodings.rs  lib.rs
crates/stratum/tests/: encodings.rs
editors/: .gitignore
editors/jupyterlab-stratum/: README.md  package.json  tsconfig.json
editors/jupyterlab-stratum/src/: index.ts  stratum.ts
editors/jupyterlab-stratum/style/: base.css
editors/pygments/: README.md  pyproject.toml
editors/pygments/stratum_pygments/: __init__.py  lexer.py
editors/pygments/tests/: sample.strat  test_lexer.py
editors/vscode-stratum/: .gitignore  README.md  language-configuration.json  package.json
editors/vscode-stratum/syntaxes/: stratum.tmLanguage.json
editors/vscode-stratum/test/: tokenize.test.mjs
proofs/: Extract.v  README.md  Rho.v  _CoqProject  oracle.ml  oracle.mli
