[package]
name = "stratum-field"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Information fields (σ-algebras) and measurability over ρ-calculus configurations — the field grain."

[dependencies]
stratum-core = { path = "../stratum-core" }
stratum-lts = { path = "../stratum-lts" }
