[package]
name = "stratum-kernel"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Jupyter kernel for the Stratum DSL: speaks the Jupyter wire protocol over pure-Rust ZeroMQ and delegates cell handling to stratum-notebook."

[[bin]]
name = "stratum-kernel"
path = "src/main.rs"

[dependencies]
stratum-notebook = { path = "../stratum-notebook" }

# Async runtime + pure-Rust ZeroMQ (no system libzmq — important on Windows).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
zeromq = "0.6"
bytes = "1"

# Wire protocol: HMAC-SHA256 signing, JSON blobs, message ids, timestamps.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "process"] }
tempfile = "3"
