[package]
name = "stratum-logic"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Modal μ-calculus model checker over the ρ-calculus trace LTS — the temporal-logic layer."

[dependencies]
stratum-core = { path = "../stratum-core" }
stratum-lts = { path = "../stratum-lts" }
stratum-field = { path = "../stratum-field" }
