[package]
name = "stratum-lts"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Labelled transition system over ρ-calculus reduction — the trace layer."

[dependencies]
stratum-core = { path = "../stratum-core" }
# Structured, zero-cost-without-a-subscriber diagnostics over the trace stepper
# (event firing, provenance) — quiet in normal builds, opt-in via any subscriber.
tracing = "0.1"

[dev-dependencies]
# Test-only back-edge: exercise the real μ-calculus checker on both the full and
# POR LTS in the differential test. This is a dev-dependency cycle
# (stratum-logic → stratum-lts), which Cargo permits precisely because it does
# not affect the normal build graph.
stratum-logic = { path = "../stratum-logic" }
