[package]
name = "stratum-notebook"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Substrate-agnostic notebook core for Stratum: rendering, completion, and namespace state shared by front-ends (Jupyter, web)."

[dependencies]
stratum = { path = "../stratum" }

# Pure-Rust DOT parser + graph layout → SVG (no system Graphviz; matters on
# Windows). Used to render an LTS's DOT into an inline SVG MIME part.
layout-rs = "0.1"
