[package]
name = "stratum-notebook"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Substrate-agnostic notebook core for Stratum: rendering, completion, and namespace state shared by front-ends (Jupyter, web)."

[dependencies]
stratum = { path = "../stratum" }

# Embedded scripting engine for the `#rune` cell: researchers script
# loops / custom algorithms over the real toolkit objects without recompiling.
# `capture-io` redirects the script's `println` into a buffer we surface as the
# cell's stdout; a per-instruction budget makes a runaway script error cleanly
# instead of hanging the kernel.
rune = { version = "0.14", features = ["capture-io"] }
